# structable

./: CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: audit.yml  ci.yml  committed.yml  linters.yml  release-plz.yml  scorecard.yml
structable/: CHANGELOG.md  Cargo.toml
structable/src/: lib.rs
structable_derive/: CHANGELOG.md  Cargo.toml  README.md
structable_derive/src/: lib.rs  structable.rs
