[workspace]
resolver = "2"
members = [
  "structable_derive",
  "structable",
]

[workspace.package]
license = "Apache-2.0"
edition = "2021"
authors = ["Artem Goncharov (gtema)"]
rust-version = "1.76"  # MSRV
homepage = "https://github.com/gtema/structable"
repository = "https://github.com/gtema/structable"

[workspace.dependencies]
serde = { version="^1.0", features=["derive"] }
serde_json = "^1.0"

[profile.dev]
debug = 0

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
