[package]
name = "structable"
description = "A crate for 'serializing' structs as Vec<Vec<String>> tables"
version = "0.3.1"
readme = "README.md"
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
structable_derive = { version = "^0.3", path = "../structable_derive" }
serde.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

[[example]]
name = "user"
path = "examples/user.rs"

[[example]]
name = "users"
path = "examples/users.rs"
