[package]
name = "structable_derive"
version = "0.2.1"
authors = ["Artem Goncharov (gtema)"]
description = "Derive macros for the StructTable trait (structable crate)"
categories.workspace = true
keywords.workspace = true
readme = "README.md"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
darling = "^0.20"
proc-macro2 = "^1.0"
syn = { version = "^2.0", features=["full"] }
quote = "^1.0"

[lib]
proc-macro = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
